infrastructure/overlays/test/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: scdb-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      hostname: "*.test.home.dblanchet.net"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-test-argocd
      protocol: HTTPS
      port: 8443
      hostname: argocd.test.home.dblanchet.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-test-tls
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
